modules/gdscript/tests/scripts/Traits/analyzer/errors/trait_member_shadowing.gd
uses TraitA

var some_abstract_function
